--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,51 @@
+# Compiled source #
+###################
+*.com
+*.class
+*.dll
+!log4net.dll
+*.exe
+*.o
+*.so
+*.pdb
+
+
+# Packages #
+############
+# it's better to unpack these files and commit the raw source
+# git has its own built in compression methods
+*.7z
+*.dmg
+*.gz
+*.iso
+*.jar
+*.rar
+*.tar
+*.zip
+
+# Logs and databases #
+######################
+*.log
+log-file.txt
+*.sql
+*.sqlite
+
+# OS generated files #
+######################
+.DS_Store*
+ehthumbs.db
+Icon?
+Thumbs.db
+
+# VS #
+######
+*.vcproj.*.user
+*.ncb
+*.aps
+*.suo
+*.cache
+*FileListAbsolute*.txt
+
 # Build Folders (you can keep bin if you'd like, to store dlls and pdbs)
 bin
 obj
