Carried on adapting to new SIPLIB - finished going through Main_window.xaml.cs and changed / commented out what was needed.

--- a/IMS_client/IMS_client.csproj
+++ b/IMS_client/IMS_client.csproj
@@ -236,6 +236,8 @@
     <Compile Include="Settings_window.xaml.cs">
       <DependentUpon>Settings_window.xaml</DependentUpon>
     </Compile>
+    <Compile Include="SIPApp.cs" />
+    <Compile Include="SipTypes.cs" />
     <Compile Include="Status.cs" />
     <Compile Include="Status_Converter.cs" />
     <Compile Include="Style_Window.cs" />
